--- a/analytics-demo/index.html
+++ b/analytics-demo/index.html
@@ -7,7 +7,9 @@
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"/>
 
-    <title>Solid App</title>
+    <script defer data-domain="test-plausible.github.io" src="https://plausible.io/js/script.file-downloads.hash.outbound-links.js"></script>
+
+    <title>Tst Plausible</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
